# torchDTCC

./: .gitignore  README.md  clustering.py  config.yaml  dtcc.py  example.py  pyproject.toml  requirements.txt  trainer.py
datasets/meat/: arff_meat.py
dtcc/: clustering.py  trainer.py
timeseries/: augmentations.py
torchdtcc/augmentations/: basic.py  label_dependent.py
torchdtcc/datasets/: arff_dataset.py  augmented_dataset.py
torchdtcc/datasets/meat/: arff_meat.py
torchdtcc/datasets/plane/: arff_plane.py
torchdtcc/datasets/test/: toy.py
torchdtcc/dtcc/: autoencoder.py  clustering.py  dilated_rnn.py  dtcc.py  trainer.py
torchdtcc/training/: autoencoder_trainer.py  hyperparam_search.py  mlflow.py  trainer.py
torchdtcc/training/autoencoder/: mlflow.py  trainer.py
torchdtcc/training/dtcc/: mlflow.py  trainer.py
